--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: java
 jdk:
-- openjdk8
+  -oraclejdk8
 before_install:
-- mvn install -DskipTests
+  - mvn install -DskipTests
 script:
-    - mvn test
+  - mvn test
 notifications:
   email: false
