--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <version>10.0-b28</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.tinylog</groupId>
+            <artifactId>tinylog</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
     </dependencies>
 
     <licenses>
