--- a/docs/_data/sidebar.yml
+++ b/docs/_data/sidebar.yml
@@ -5,8 +5,18 @@ user-guide:
     children:
       - title: Installation and Usage
         url: /user-guide/getting-started#installation-and-usage
-      - title: Configuration
-        url: /user-guide/getting-started#configuration
+  - title: Configuration
+    url: /user-guide/configuration
+    grouping: configuration
+    children:
+      - title: Config.yaml
+        url: /user-guide/configuration#configyaml
+      - title: Properties
+        url: /user-guide/configuration#properties
+      - title: Environment Variables
+        url: /user-guide/configuration#environment-variables
+      - title: Custom Capabilitites
+        url: /user-guide/configuration#custom-capabilities
   - title: Command Line Interface
     url: /user-guide/command-line-interface
     grouping: cli
@@ -15,34 +25,6 @@ user-guide:
         url: /user-guide/command-line-interface#usage
       - title: Formatting options
         url: /user-guide/command-line-interface#formatting-options
-  - title: Rules Engine
-    url: /user-guide/rules-engine
-    grouping: rules-engine
-    children:
-      - title: Setup
-        url: /user-guide/rules-engine#setup
-      - title: Configuring
-        url: /user-guide/rules-engine#configuring
-  - title: Rules
-    url: /user-guide/rules
-    grouping: rules
-    children:
-      - title: camel-case-func
-        url: /user-guide/rules/camel-case-func  
-      - title: comma-separated-arrays
-        url: /user-guide/rules/comma-separated-arrays
-      - title: function-return-statement
-        url: /user-guide/rules/function-return-statement
-      - title: no-print
-        url: /user-guide/rules/no-print
-      - title: no-private-func
-        url: /user-guide/rules/no-private-func
-      - title: no-shorthand-if
-        url: /user-guide/rules/no-shorthand-if
-      - title: no-stop
-        url: /user-guide/rules/no-stop
-      - title: no-void-func
-        url: /user-guide/rules/no-void-func
 developer-guide:
   - title: Getting Started
     url: /developer-guide/getting-started
