--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@
             <version>1.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.saucelabs</groupId>
+            <artifactId>sauce_testng</artifactId>
+            <version>2.1.23</version>
+        </dependency>
+
     </dependencies>
 
     <licenses>
