Updates to tests, config, and yaml to correct test failures

--- a/src/test/resources/test_yaml/ios_full.yaml
+++ b/src/test/resources/test_yaml/ios_full.yaml
@@ -14,4 +14,5 @@ defaults:
     deviceName: Bravest Auxless Phone
     xcodeOrgId: orgId
     xcodeSigningId: signingId
+    waitForQuiescence: true
     appFile: /full/path/to/ios.ipa
