--- a/src/test/resources/test_yaml/ios_full.yaml
+++ b/src/test/resources/test_yaml/ios_full.yaml
@@ -16,3 +16,6 @@ defaults:
     xcodeSigningId: signingId
     waitForQuiescence: true
     appFile: /full/path/to/ios.ipa
+    newCommandTimeout: 600
+    idleTimeout: 600
+    simpleIsVisibleCheck: true
