1. rework startAppiumSession() to have a clearer recursion structure 2. catch WebDriverException too for more reliable restarts 3. refactor test to use spy 4. replace invalid orientation with PORTRAIT

--- a/src/test/resources/test_yaml/android_full.yaml
+++ b/src/test/resources/test_yaml/android_full.yaml
@@ -4,7 +4,7 @@ platformName: ANDROID
 defaults:
   fullReset: true
   noReset: false
-  orientation: vertical
+  orientation: PORTRAIT
   appiumVersion: 1.7.1
   startSessionRetries: 6
 
