adding in avdArgs support for Android

--- a/src/test/resources/test_yaml/android_full.yaml
+++ b/src/test/resources/test_yaml/android_full.yaml
@@ -16,6 +16,7 @@ defaults:
     platformVersion: 6.0
     deviceName: Pixelated Nexus
     avd: Nexus 13
+    avdArgs: -no-window
     appActivity: LaunchActivity
     appWaitActivity: HomeActivity
     intentCategory: android.intent.category.LEANBACK_LAUNCHER
