--- a/build.gradle
+++ b/build.gradle
@@ -102,6 +102,8 @@ publishing {
     }
 }
 
-signing {
-    sign publishing.publications.lib
+if (project.hasProperty("signing.keyId")) {
+    signing {
+        sign publishing.publications.lib
+    }
 }
