--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,20 +11,17 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "hyperion-core/build.gradle" }}
+          key: j-{{ checksum "build.gradle" }}-{{ checksum  "settings.gradle" }}
       #      - run:
       #         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
       #         command: sudo chmod +x ./gradlew
-      - run:
-          name: Download Dependencies
-          command: ./gradlew androidDependencies
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "settings.gradle" }}
+          key: j-{{ checksum "build.gradle" }}-{{ checksum  "settings.gradle" }}
       - run:
           name: Build
-          command: ./gradlew assemble
+          command: gradle assemble
       #- run:
       #    name: Check
       #    command: ./gradlew test
@@ -36,7 +33,7 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
             echo "$MAVEN_CENTRAL_SEC_RING" | base64 -d > $HOME/secring.gpg
             gpg --import --batch $HOME/secring.gpg
-              ./gradlew publish -Psonatype.username=$SONATYPE_USERNAME -Psonatype.password=$SONATYPE_PASSWORD -Psigning.keyId=0E7A8B89 -Psigning.password=$MAVEN_CENTRAL_KEY_PASSPHRASE -Psigning.secretKeyRingFile=$HOME/secring.gpg -Porg.gradle.parallel=false
+              gradle publish -Psonatype.username=$SONATYPE_USERNAME -Psonatype.password=$SONATYPE_PASSWORD -Psigning.keyId=0E7A8B89 -Psigning.password=$MAVEN_CENTRAL_KEY_PASSPHRASE -Psigning.secretKeyRingFile=$HOME/secring.gpg -Porg.gradle.parallel=false
             fi
 workflows:
   version: 2
