--- a/build.gradle
+++ b/build.gradle
@@ -11,22 +11,38 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile "org.yaml:snakeyaml:1.19"
-    compile "org.tinylog:tinylog:1.3.2"
-    compile "io.appium:java-client:6.1.0"
-    compile "org.glassfish:javax.annotation:10.0-b28"
-    compile "org.junit.platform:junit-platform-surefire-provider:1.0.0-M3"
-    compile "org.testng:testng:6.14.3"
-    compile "org.assertj:assertj-swing-junit:3.4.0"
-    compile "org.tinylog:tinylog:1.3.1"
-    compile "com.saucelabs:sauce_testng:2.1.23"
+ext {
+    snakeYamlVersion = '1.19'
+    tinyLogVersion = '1.3.2'
+    appiumJavaClientVersion = '7.1.0'
+    glassfishJavaxAnnotationVersion = '10.0-b28'
+    junitPlatformSurefireProviderVersion = '1.0.0-M3'
+    testngVersion = '6.14.3'
+    assertjSwingJunitVersion = '3.4.0'
+    sauceTestngVersion = '2.1.23'
 
-    testCompile "org.hamcrest:hamcrest-library:1.3"
-    testCompile "org.junit.jupiter:junit-jupiter-engine:5.0.0-M3"
-    testCompile "org.junit.vintage:junit-vintage-engine:4.12.0-M3"
-    testCompile "org.mockito:mockito-core:2.18.3"
+    hamcrestLibraryVersion = '1.3'
+    junitJupiterEngineVersion = '5.0.0-M3'
+    junitVintageEngineVersion = '4.12.0-M3'
+    mockitoCoreVersion = '2.18.3'
 }
+
+    dependencies {
+        compile "org.tinylog:tinylog:$tinyLogVersion"
+        compile "org.yaml:snakeyaml:$snakeYamlVersion"
+        compile "io.appium:java-client:$appiumJavaClientVersion"
+        compile "org.glassfish:javax.annotation:$glassfishJavaxAnnotationVersion"
+        compile "org.junit.platform:junit-platform-surefire-provider:$junitPlatformSurefireProviderVersion"
+        compile "org.testng:testng:$testngVersion"
+        compile "org.assertj:assertj-swing-junit:$assertjSwingJunitVersion"
+        compile "com.saucelabs:sauce_testng:$sauceTestngVersion"
+
+        testCompile "org.hamcrest:hamcrest-library:$hamcrestLibraryVersion"
+        testCompile "org.junit.jupiter:junit-jupiter-engine:$junitJupiterEngineVersion"
+        testCompile "org.junit.vintage:junit-vintage-engine:$junitVintageEngineVersion"
+        testCompile "org.mockito:mockito-core:$mockitoCoreVersion"
+    }
+
 
 test {
     useTestNG()
