Update retries and timeout in yamls Removed unneeded tests   - condensed waitForElement method to use only one method maintained in a separate library, no longer has custom logic that needs testing Update variable name Update version number to 0.19.1

--- a/src/test/resources/test_yaml/simple_defaults.yaml
+++ b/src/test/resources/test_yaml/simple_defaults.yaml
@@ -4,5 +4,5 @@ platformName: IOS
 defaults:
   noReset: false
   appiumVersion: 1.13.0
-  timeout: 8
-  retries: 10
+  appiumRequestTimeout: 8
+  implicitWaitTime: 10
