--- a/src/test/resources/test_yaml/all_platforms.yaml
+++ b/src/test/resources/test_yaml/all_platforms.yaml
@@ -6,27 +6,27 @@ currentSchemes:
 defaults:
   noReset: false
   appiumVersion: 1.13.0
-  timeout: 8
-  retries: 10
+  appiumRequestTimeout: 8
+  implicitWaitTime: 10
 
   android:
-    retries: 4
+    implicitWaitTime: 4
     appFile: ./apps/android.apk
     appActivity: com.android.activity
 
   ios:
-    retries: 4
+    implicitWaitTime: 4
     appFile: ./apps/ios.app
     xcodeSigningId: iPhone Developer
     xcodeOrgId: TEAMID
 
 shorter_timeouts:
-  retries: 8
-  timeout: 5
+  implicitWaitTime: 8
+  appiumRequestTimeout: 5
 
 longer_timeouts:
-  retries: 5
-  timeout: 20
+  implicitWaitTime: 5
+  appiumRequestTimeout: 20
 
 android_device:
   udid: auto
