--- a/src/test/resources/test_yaml/android_defaults.yaml
+++ b/src/test/resources/test_yaml/android_defaults.yaml
@@ -4,16 +4,16 @@ platformName: ANDROID
 defaults:
   noReset: false
   appiumVersion: 1.13.0
-  timeout: 8
-  retries: 10
+  appiumRequestTimeout: 8
+  implicitWaitTime: 10
 
   android:
-    retries: 4
+    implicitWaitTime: 4
     appFile: ./apps/android.apk
     appActivity: com.android.activity
 
   ios:
-    retries: 4
+    implicitWaitTime: 4
     appFile: ./apps/ios.app
     xcodeSigningId: iPhone Developer
     xcodeOrgId: TEAMID
