--- a/src/test/resources/test_yaml/android_defaults_custom_caps.yaml
+++ b/src/test/resources/test_yaml/android_defaults_custom_caps.yaml
@@ -4,8 +4,8 @@ platformName: ANDROID
 defaults:
   noReset: false
   appiumVersion: 1.13.0
-  timeout: 8
-  retries: 10
+  appiumRequestTimeout: 8
+  implicitWaitTime: 10
   customCapabilities:
     foo: bar
     fizz: buzz
@@ -13,12 +13,12 @@ defaults:
 
   android:
     deviceName: device
-    retries: 4
+    implicitWaitTime: 4
     appFile: ./apps/android.apk
     appActivity: com.android.activity
 
   ios:
-    retries: 4
+    implicitWaitTime: 4
     appFile: ./apps/ios.app
     xcodeSigningId: iPhone Developer
     xcodeOrgId: TEAMID
