--- a/src/test/resources/test_yaml/environment_vars.yaml
+++ b/src/test/resources/test_yaml/environment_vars.yaml
@@ -4,7 +4,7 @@ platformName: IOS
 defaults:
   noReset: false
   appiumVersion: 1.13.0
-  timeout: 8
-  retries: 10
+  appiumRequestTimeout: 8
+  implicitWaitTime: 10
   udid: ${FOO_PROPERTY}
   platformVersion: ${PLATFORM_MAJOR}.${PLATFORM_MINOR}
