--- a/build.gradle
+++ b/build.gradle
@@ -2,24 +2,25 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'signing'
+    id "com.github.ben-manes.versions" version "0.25.0"
 }
 
 group = 'com.willowtreeapps'
-version = '0.19.1'
+version = '0.19.2'
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    snakeYamlVersion = '1.19'
-    tinyLogVersion = '1.3.2'
-    appiumJavaClientVersion = '7.1.0'
+    snakeYamlVersion = '1.25'
+    tinyLogVersion = '1.3.6'
+    appiumJavaClientVersion = '7.2.0'
     glassfishJavaxAnnotationVersion = '10.0-b28'
     junitPlatformSurefireProviderVersion = '1.0.0-M3'
     testngVersion = '6.14.3'
     assertjSwingJunitVersion = '3.4.0'
-    sauceTestngVersion = '2.1.23'
+    sauceTestngVersion = '2.1.25'
 
     hamcrestLibraryVersion = '1.3'
     junitJupiterEngineVersion = '5.0.0-M3'
