Use ./gradlew instead of gradle to keep version consistent on CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       #         command: sudo chmod +x ./gradlew
       - run:
           name: Check
-          command: gradle test
+          command: ./gradlew test
       - save_cache:
           paths:
             - ~/.gradle
